# AutoPrism

./: .env.example  .gitignore  README.md  SETUP.md  TODO.md  pyproject.toml  requirements.txt
.cursor/skills/figma-page-to-prism/: SKILL.md
.github/workflows/: ci.yml
improvements/: 01-current-state-analysis.md  02-phase1-fetch-fix.md  03-phase2-catalog.md  04-phase3-routing-and-props.md  05-phase4-layout.md  06-phase5-tokens.md  07-phase6-content.md  08-phase8-codespec.md  09-warning-ordering-fix.md  README.md  figma-source-links.md  worklog.md
mocks/figma_tree/: QjBuSKHooZN4GEzA2rJy6P__752_13805.json  QjBuSKHooZN4GEzA2rJy6P__753_20750.json  SzP22zLyApL9R5nsQYheeo__3800_49763.json
scripts/: audit_layer_b_agreement.py  build_canaveral_ca_bundle.sh  build_figma_catalog.py  build_mock_3800_49763.py  build_mock_752_13805.py  build_mock_753_20750.py  build_prop_schema.py  fetch_x_ray_fixtures.py  measure_codespec.py  measure_content_resolution.py  measure_layout_resolution.py  measure_prop_resolution.py  measure_tier1_routing.py  measure_token_resolution.py  repro_699_24118_result.json  validate_catalog_coverage.py  verify_server.py
src/prism_mcp/: __init__.py  a11y.py  cache.py  color.py  config.py  embeddings.py  entities.py  figma_mapping.py  graph.py  indexer.py  integrity.py  library.py  library_assets.py  refresh.py  registry.py  retrieval.py  search.py  server.py  setup_cli.py  tokens_index.py
src/prism_mcp/figma/: __init__.py  catalog.py  catalog_overrides.py  codespec.py  content.py  fetch.py  filter.py  layout.py  layout_inference.py  mocks.py  models.py  patterns.py  prop_overrides.py  prop_schema.py  props.py  routing.py  tokens.py  types.py  utils.py  walker.py
src/prism_mcp/figma/data/: figma_catalog.json  prism_prop_schema.json
src/prism_mcp/parsers/: __init__.py  components.py  dts.py  examples_md.py  examples_md_code.py  hooks.py  managers.py  tokens.py  utils.py
src/prism_mcp/workflow/: __init__.py  activities.py  contracts.py  figma_mapping.py  reflection.py  ssim.py  worker.py  workflow.py
tests/: conftest.py  test_a11y.py  test_cache.py  test_color.py  test_config.py  test_embeddings.py  test_figma_catalog.py  test_figma_codespec.py  test_figma_content.py  test_figma_fetch.py  test_figma_fetch_integration.py  test_figma_filter.py  test_figma_identity.py  test_figma_layout.py  test_figma_layout_inference.py  test_figma_layout_walker.py  test_figma_lean_response.py  test_figma_map_tree_tool.py  test_figma_mapping.py  test_figma_mocks.py  test_figma_models.py  test_figma_patterns.py  test_figma_prop_resolution_walker.py  test_figma_prop_schema.py  test_figma_props.py  test_figma_routing.py  test_figma_tier1_routing.py  test_figma_tokens.py  test_figma_utils_box_style.py  test_figma_walk_e2e.py  test_figma_walker.py  test_figma_walker_filter.py  test_graph.py  test_indexer.py  test_integrity.py  test_library.py  test_library_assets.py  test_parsers_components.py  test_parsers_dts.py  test_parsers_examples_md.py  (+23 more)
tests/fixtures/figma/: _generate_goldens.py  _strip_fixture.py  figma-active-cluster-page.expected.json  figma-active-cluster-page.json  figma-d02-share-summary.expected.json  figma-d02-share-summary.json  figma-e01-share-summary.expected.json  figma-e01-share-summary.json  figma-node-626-986.expected.json  figma-node-626-986.json  hamburger-icon.expected.json  hamburger-icon.json  opportunities-page.expected.json  opportunities-page.json  table-column.expected.json  table-column.json  x-ray-3-results-progress-empty.expected.json  x-ray-3-results-progress-empty.json  x-ray-4-gold-image-list.expected.json  x-ray-4-gold-image-list.json
