[project]
name = "prism-mcp"
version = "0.1.0"
description = "MCP server exposing @nutanix-ui/prism-reactjs to LLM clients"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Nutanix", email = "noreply@nutanix.com" },
]
keywords = ["mcp", "prism", "nutanix", "react"]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.27.0",
  "httpx>=0.27.0",
  "rank-bm25>=0.2.2",
]

[project.scripts]
prism-mcp = "prism_mcp.server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_mcp"]

# --------------------------------------------------------------------------
# Ruff: linter + formatter. Line length 80 per Nutanix Python standards.
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 80
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["prism-ui-prism-reactjs-lib-master"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "G",    # flake8-logging-format (no f-strings in logger calls)
]
ignore = [
  "E501",  # line-too-long: formatter handles it; long URLs/strings allowed
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --------------------------------------------------------------------------
# Pytest: -q for fast inner loop. asyncio auto so async tests "just work".
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

# --------------------------------------------------------------------------
# Coverage: PRD section 8 specifies --cov-fail-under=80 on src/.
# Transport layer (server entrypoint) is excluded from the gate per PRD.
# --------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
